--- a/.github/workflows/builds_mobile_qmake.yml
+++ b/.github/workflows/builds_mobile_qmake.yml
@@ -12,7 +12,7 @@ on:
 #-------------------------------------------------------------------------------
 
 env:
-  APPLICATION: "MobileUI demo"
+  APPLICATION: "MobileUI_demo"
   APPLICATION_VERSION: "0.1"
   QT_VERSION: "6.5.1"
 
@@ -56,9 +56,6 @@ jobs:
           host: 'linux'
           target: 'android'
           arch: 'android_arm64_v8a'
-          modules: qt5compat
-          aqtversion: '==3.1.*'
-          py7zrversion: '==0.20.*'
           extra: '--autodesktop'
 
       # Setup env
@@ -90,9 +87,6 @@ jobs:
           version: ${{env.QT_VERSION}}
           host: 'mac'
           target: 'ios'
-          modules: qtconnectivity qtcharts qtshadertools qt5compat
-          aqtversion: '==3.1.*'
-          py7zrversion: '==0.20.*'
           extra: '--autodesktop'
 
       # Setup env
