--- a/.github/workflows/builds_mobile_qmake.yml
+++ b/.github/workflows/builds_mobile_qmake.yml
@@ -56,6 +56,7 @@ jobs:
           host: 'linux'
           target: 'android'
           arch: 'android_arm64_v8a'
+          aqtversion: '==3.2.*'
           extra: '--autodesktop'
 
       # Setup env
@@ -87,6 +88,7 @@ jobs:
           version: ${{env.QT_VERSION}}
           host: 'mac'
           target: 'ios'
+          aqtversion: '==3.2.*'
           extra: '--autodesktop'
 
       # Setup env
