--- a/.github/workflows/builds_mobile_qmake.yml
+++ b/.github/workflows/builds_mobile_qmake.yml
@@ -12,9 +12,9 @@ on:
 #-------------------------------------------------------------------------------
 
 env:
-  APPLICATION: "MobileUI_demo"
-  APPLICATION_VERSION: "0.1"
-  QT_VERSION: "6.5.1"
+APP_NAME: "MobileUI_demo"
+APP_VERSION: "0.1"
+QT_VERSION: "6.5.3"
 
 #-------------------------------------------------------------------------------
 # Workflow jobs
@@ -28,7 +28,7 @@ jobs:
     steps:
       # Checkout the repository (and submodules)
       - name: Checkout repository (and submodules)
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -45,8 +45,8 @@ jobs:
       #- name: Install Android SDK / NDK / tools
       #  run: |
       #       sdkmanager "platforms;android-33"
-      #       sdkmanager "ndk;25.1.8937393"
-      #       sdkmanager "build-tools;31.0.1"
+      #       sdkmanager "ndk;25.2.9519653"
+      #       sdkmanager "build-tools;33.0.2"
 
       # Install Qt (Android & desktop)
       - name: Install Qt (Android & desktop)
@@ -67,7 +67,7 @@ jobs:
       # Build application
       - name: Build application
         run: |
-             qmake ${{env.APPLICATION}}.pro CONFIG+=release
+             qmake ${{env.APP_NAME}}.pro CONFIG+=release
              make -j$(nproc)
 
   ## iOS build #################################################################
@@ -94,11 +94,11 @@ jobs:
       # Setup env
       - name: Setup env
         run: |
-             ln -s /Users/runner/work/${{env.APPLICATION}}/Qt/${{env.QT_VERSION}}/macos /Users/runner/work/${{env.APPLICATION}}/Qt/${{env.QT_VERSION}}/clang_64
+             ln -s /Users/runner/work/${{env.APP_NAME}}/Qt/${{env.QT_VERSION}}/macos /Users/runner/work/${{env.APPLICATION}}/Qt/${{env.QT_VERSION}}/clang_64
              qmake --version
 
       # Build application
       - name: Build application
         run: |
-             qmake ${{env.APPLICATION}}.pro CONFIG+=release
-             make -j$(nproc)
+             qmake ${{env.APP_NAME}}.pro CONFIG+=release
+             make
