--- a/.github/workflows/builds_mobile_cmake.yml
+++ b/.github/workflows/builds_mobile_cmake.yml
@@ -67,13 +67,13 @@ jobs:
       # Setup env
       - name: Setup env
         run: |
-             echo "QT_HOST_PATH=/home/runner/work/${{env.APP_NAME}}/Qt/${{env.QT_VERSION}}/gcc_64" >> $GITHUB_ENV
+             #echo "QT_HOST_PATH=/home/runner/work/${{env.APP_NAME}}/Qt/${{env.QT_VERSION}}/gcc_64" >> $GITHUB_ENV
              cmake --version
 
       # Build application
       - name: Build application
         run: |
-             cmake -DCMAKE_SYSTEM_NAME=Android -DCMAKE_TOOLCHAIN_FILE=${{env.ANDROID_NDK_HOME}}/build/cmake/android.toolchain.cmake -DANDROID_PLATFORM=android-23 .
+             cmake .
              cmake --build .
 
   ## iOS build #################################################################
@@ -98,18 +98,18 @@ jobs:
           extra: '--autodesktop'
 
       # Install dependencies (from package manager)
-      - name: Install dependencies (from package manager)
-        run: |
-             brew install cmake
+      #- name: Install dependencies (from package manager)
+      #  run: |
+      #       brew install cmake
 
       # Setup env
       - name: Setup env
         run: |
-             echo "QT_HOST_PATH=/Users/runner/work/${{env.APP_NAME}}/Qt/${{env.QT_VERSION}}/macos" >> $GITHUB_ENV
+             #echo "QT_HOST_PATH=/Users/runner/work/${{env.APP_NAME}}/Qt/${{env.QT_VERSION}}/macos" >> $GITHUB_ENV
              cmake --version
 
       # Build application
       - name: Build application
         run: |
-             cmake -DCMAKE_SYSTEM_NAME=iOS .
+             cmake .
              cmake --build .
