--- a/.github/workflows/builds_mobile_qmake.yml
+++ b/.github/workflows/builds_mobile_qmake.yml
@@ -6,6 +6,7 @@ name: "Mobile CI builds (qmake)"
 on:
   push:
   pull_request:
+  workflow_dispatch:
 
 #-------------------------------------------------------------------------------
 # Define application name & version
@@ -26,38 +27,36 @@ jobs:
     name: "Android CI build"
     runs-on: ubuntu-20.04
     steps:
-      # Checkout the repository (and submodules)
+      # Checkout repository (and submodules)
       - name: Checkout repository (and submodules)
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
       # Java environment (already installed in 'ubuntu-20.04')
-      #- name: Install JDK environment
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'zulu'
-      #    java-version: '11'
+      - name: Setup Java environment
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       # Android environment (already installed in 'ubuntu-20.04')
-      #- name: Setup Android SDK
-      #  uses: android-actions/setup-android@v2
+      #- name: Setup Android environment
+      #  uses: android-actions/setup-android@v3
       #- name: Install Android SDK / NDK / tools
       #  run: |
-      #       sdkmanager "platforms;android-33"
-      #       sdkmanager "ndk;25.2.9519653"
-      #       sdkmanager "build-tools;33.0.2"
+      #       sdkmanager "platforms;android-34"
+      #       sdkmanager "ndk;26.3.11579264"
+      #       sdkmanager "build-tools;34.0.0"
 
-      # Install Qt (Android & desktop)
-      - name: Install Qt (Android & desktop)
-        uses: jurplel/install-qt-action@v3
+      # Install Qt (desktop & Android)
+      - name: Install Qt (desktop & Android)
+        uses: jurplel/install-qt-action@v4
         with:
           version: ${{env.QT_VERSION}}
           host: 'linux'
           target: 'android'
           arch: 'android_arm64_v8a'
-          aqtversion: '==3.1.*'
-          py7zrversion: '==0.20.*'
           extra: '--autodesktop'
 
       # Setup env
@@ -76,7 +75,7 @@ jobs:
     name: "iOS CI build"
     runs-on: macos-12
     steps:
-      # Checkout the repository (and submodules)
+      # Checkout repository (and submodules)
       - name: Checkout repository (and submodules)
         uses: actions/checkout@v4
         with:
@@ -84,23 +83,20 @@ jobs:
 
       # Install Qt (iOS & desktop)
       - name: Install Qt (iOS & desktop)
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@v4
         with:
           version: ${{env.QT_VERSION}}
           host: 'mac'
           target: 'ios'
-          aqtversion: '==3.1.*'
-          py7zrversion: '==0.20.*'
           extra: '--autodesktop'
 
       # Setup env
       - name: Setup env
         run: |
              qmake --version
-             alias nproc="sysctl -n hw.logicalcpu"
 
       # Build application
       - name: Build application
         run: |
              qmake ${{env.APP_NAME}}.pro CONFIG+=release
-             make -j$(nproc)
+             make -j`sysctl -n hw.logicalcpu`
