--- a/assets/android/AndroidManifest.xml
+++ b/assets/android/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.emeric.mobileuidemo" android:installLocation="auto"
-          android:versionName="0.1" android:versionCode="000101">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto"
+          android:versionName="0.1" android:versionCode="000101"
+          package="io.emeric.mobileuidemo">
 
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application android:name="org.qtproject.qt.android.bindings.QtApplication"
-                 android:extractNativeLibs="true" android:hardwareAccelerated="true" android:allowNativeHeapPointerTagging="false"
+                 android:theme="@style/AppTheme"
                  android:label="MobileUI">
 
         <activity android:name="org.qtproject.qt.android.bindings.QtActivity"
                   android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation|mcc|mnc|density"
-                  android:launchMode="singleTop" android:screenOrientation="unspecified" android:windowSoftInputMode="adjustResize" android:exported="true"
+                  android:launchMode="singleTop" android:screenOrientation="unspecified" android:exported="true"
                   android:label="MobileUI">
 
             <intent-filter>
@@ -23,7 +23,7 @@
 
             <meta-data android:name="android.app.lib_name" android:value="-- %%INSERT_APP_LIB_NAME%% --" />
             <meta-data android:name="android.app.arguments" android:value="-- %%INSERT_APP_ARGUMENTS%% --" />
-            <meta-data android:name="android.app.extract_android_style" android:value="none" />
+            <meta-data android:name="android.app.extract_android_style" android:value="minimal" />
         </activity>
 
     </application>
