--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,8 @@ qt_standard_project_setup(REQUIRES 6.5)
 
 qt_add_executable(${CMAKE_PROJECT_NAME} src/main.cpp qml/qml.qrc)
 
-target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC src/thirdparty/)
-
 # MobileUI
-add_subdirectory(src/thirdparty/MobileUI)
+add_subdirectory(MobileUI/)
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE MobileUI)
 
 ################################################################################
