--- a/.github/workflows/builds_mobile_cmake.yml
+++ b/.github/workflows/builds_mobile_cmake.yml
@@ -73,20 +73,17 @@ jobs:
       # Build application
       - name: Build application
         run: |
-             cmake --version
-             cmake -B build/ -G Ninja \
+             ${{env.QT_TARGET_PATH}}/bin/qt-cmake --version
+             ${{env.QT_TARGET_PATH}}/bin/qt-cmake -B build/ -G Ninja \
                -DCMAKE_SYSTEM_NAME=Android \
                -DCMAKE_BUILD_TYPE=Release \
                -DCMAKE_FIND_ROOT_PATH:PATH=${{env.QT_TARGET_PATH}} \
                -DCMAKE_PREFIX_PATH:PATH=${{env.QT_TARGET_PATH}} \
-               -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_ROOT/build/cmake/android.toolchain.cmake \
                -DANDROID_SDK_ROOT=$ANDROID_SDK_ROOT \
                -DANDROID_NDK_ROOT=$ANDROID_NDK_ROOT \
                -DANDROID_PLATFORM=android-23 \
                -DANDROID_ABI="arm64-v8a" \
-               -DQT_HOST_PATH:PATH=${{env.QT_HOST_PATH}} \
-               -DQT_ANDROID_BUILD_ALL_ABIS=ON \
-               -DQT_ANDROID_ABIS="armeabi-v7a;arm64-v8a;x86;x86_64"
+               -DQT_HOST_PATH:PATH=${{env.QT_HOST_PATH}}
              cmake --build build/ --config Release
 
   ## iOS build #################################################################
@@ -132,4 +129,4 @@ jobs:
                -DQT_HOST_PATH:PATH=${{env.QT_HOST_PATH}} \
                -DENABLE_ARC=FALSE \
                -DPLATFORM=OS64
-             cmake --build build/ --config Release
+             cmake --build build/ --config Release -- CODE_SIGNING_ALLOWED=NO
